# RMgx-RAG_PDF

./: .gitignore  DockerFile  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/models/: chat.py  models.py
app/routes/: chat.py  upload.py
app/services/: embedding.py  memory.py  meta_data.py  pdf_loader.py  pinecone_store.py  rag_pipeline.py  retriever.py  vectore_store.py
app/services/storage/: base.py  s3_storage.py  storage.py
app/utils/: aws_secrets.py  cleanup.py  file_upload.py  logger.py
frontend/: README.md  api_client.py  app.py  config.env  config.py  run_frontend.py
frontend/components/: chat_interface.py  file_manager.py  file_uploader.py
frontend/utils/: helpers.py
